Cherry-pick r281975. rdar://problem/83183224

The CSS Font Loading API shouldn't be able to delete a CSS-connected font
    https://bugs.webkit.org/show_bug.cgi?id=229640

    Reviewed by Alan Bujtas.

    LayoutTests/imported/w3c:

    * web-platform-tests/css/css-font-loading/fontfaceset-delete-css-connected-expected.txt:

    Source/WebCore:

    https://drafts.csswg.org/css-font-loading-3/#dom-fontfaceset-delete
    "1. If font is CSS-connected, return false and exit this algorithm immediately."

    Tests: web-platform-tests/css/css-font-loading/fontfaceset-delete-css-connected.html
           web-platform-tests/css/css-font-loading/fontfaceset-delete-css-connected-2.html

    * css/FontFaceSet.cpp:
    (WebCore::FontFaceSet::remove):

    LayoutTests:

    * TestExpectations:

    Canonical link: https://commits.webkit.org/241282@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281975 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.65@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@282585 268f45cc-cd09-0410-ab3c-d52691b4dbfc